--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "app",
   "private": "true",
   "engines": {
-    "node": "~18.14.1",
-    "npm": "^9.5.0"
+    "node": "~18.15.0",
+    "npm": "~9.6.2"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.2.5",
+    "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.13",
-    "esbuild": "^0.17.8",
+    "esbuild": "^0.17.12",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   },
